swagger: refactored swagger with structs
