# docs/swagger.json
@@ -38,16 +38,20 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/domain.User"
+                            "$ref": "#/definitions/v1.SignInResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
-                        "schema": {}
+                        "schema": {
+                            "$ref": "#/definitions/v1.errorResponse"
+                        }
                     },
                     "500": {
                         "description": "Internal Server Error",
-                        "schema": {}
+                        "schema": {
+                            "$ref": "#/definitions/v1.errorResponse"
+                        }
                     }
                 }
             }
@@ -81,16 +85,20 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/domain.User"
+                            "$ref": "#/definitions/v1.SignUpResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
-                        "schema": {}
+                        "schema": {
+                            "$ref": "#/definitions/v1.errorResponse"
+                        }
                     },
                     "500": {
                         "description": "Internal Server Error",
-                        "schema": {}
+                        "schema": {
+                            "$ref": "#/definitions/v1.errorResponse"
+                        }
                     }
                 }
             }
@@ -134,11 +142,15 @@
                     },
                     "400": {
                         "description": "Bad Request",
-                        "schema": {}
+                        "schema": {
+                            "$ref": "#/definitions/v1.errorResponse"
+                        }
                     },
                     "500": {
                         "description": "Internal Server Error",
-                        "schema": {}
+                        "schema": {
+                            "$ref": "#/definitions/v1.errorResponse"
+                        }
                     }
                 }
             }
@@ -175,16 +187,20 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/domain.Test"
+                            "$ref": "#/definitions/v1.getTestByIDResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
-                        "schema": {}
+                        "schema": {
+                            "$ref": "#/definitions/v1.errorResponse"
+                        }
                     },
                     "500": {
                         "description": "Internal Server Error",
-                        "schema": {}
+                        "schema": {
+                            "$ref": "#/definitions/v1.errorResponse"
+                        }
                     }
                 }
             },
@@ -228,16 +244,20 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/domain.Test"
+                            "$ref": "#/definitions/v1.statusResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
-                        "schema": {}
+                        "schema": {
+                            "$ref": "#/definitions/v1.errorResponse"
+                        }
                     },
                     "500": {
                         "description": "Internal Server Error",
-                        "schema": {}
+                        "schema": {
+                            "$ref": "#/definitions/v1.errorResponse"
+                        }
                     }
                 }
             },
@@ -272,16 +292,20 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/domain.Test"
+                            "$ref": "#/definitions/v1.statusResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
-                        "schema": {}
+                        "schema": {
+                            "$ref": "#/definitions/v1.errorResponse"
+                        }
                     },
                     "500": {
                         "description": "Internal Server Error",
-                        "schema": {}
+                        "schema": {
+                            "$ref": "#/definitions/v1.errorResponse"
+                        }
                     }
                 }
             }
@@ -365,25 +389,51 @@
                 }
             }
         },
-        "domain.User": {
+        "v1.SignInResponse": {
             "type": "object",
             "properties": {
-                "created_at": {
+                "status": {
                     "type": "string"
                 },
-                "email": {
+                "token": {
                     "type": "string"
-                },
-                "encrypted_password": {
-                    "type": "string"
-                },
+                }
+            }
+        },
+        "v1.SignUpResponse": {
+            "type": "object",
+            "properties": {
                 "id": {
                     "type": "integer"
                 },
-                "name": {
+                "status": {
+                    "type": "string"
+                }
+            }
+        },
+        "v1.errorResponse": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "v1.getTestByIDResponse": {
+            "type": "object",
+            "properties": {
+                "status": {
                     "type": "string"
                 },
-                "updated_at": {
+                "test": {
+                    "$ref": "#/definitions/domain.Test"
+                }
+            }
+        },
+        "v1.statusResponse": {
+            "type": "object",
+            "properties": {
+                "status": {
                     "type": "string"
                 }
             }
